# penguins

./: README.md  __init__.py  estructura_proyecto.mk  main.py  pyproject.toml
app/: __init__.py  config.py  main.py
app/static/: style.css
app/templates/: index.html
models/: decision_tree_model.pkl  knn_model.pkl  logistic_regression_model.pkl  preprocessor.pkl  random_forest_model.pkl
tests/: test_main.py
