[tool.poetry]
name = "penguins"
version = "1.0"
description = "penguien_db"
authors = ["asixjuana <115299477+asixjuana@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
waitress = "^3.0.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
